# bilka2go-scraper

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  bilkatogo.json  bilkatogo.md  entrypoint.sh  main.py  pyproject.toml  workload_identity_federation.sh
.github/workflows/: ci.yaml
src/: main.py
src/utils/: bigquery_connector.py
storage/fruits-and-vegetables/: fruits-and-vegetables.json
