[project]
name = "bilka2go-scraper"
version = "0.1.0"
description = "Bilka2Go Scraper"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.6.3",
    "google-api-core>=2.25.1",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud>=0.34.0",
    "google-cloud-bigquery>=3.34.0",
    "google-cloud-bigquery-storage>=2.32.0",
    "google-cloud-core>=2.4.3",
    "google-cloud-storage>=3.1.0",
    "loguru>=0.7.3",
    "playwright>=1.52.0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
]
